--- a/styles/blocks/trash/_interface.scss
+++ b/styles/blocks/trash/_interface.scss
@@ -34,11 +34,32 @@
     grid-area: game;
     display: flex;
     justify-content: center;
+    min-width: 200px;
+    min-height: 200px;
+  }
+
+  &__circle {
+    position: relative;
+    min-height: 200px;
+    min-width: 200px;
+    padding: 10px;
+  }
+  
+  &__timer {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__item-wrapper {
+    width: 100%;
+    height: 100%;
   }
 
   &__start {
-    min-width: 200px;
-    min-height: 200px;
+    width: 100%;
     border: 0;
     border-radius: 50%;
     background-color: #b063e7;
@@ -62,7 +83,6 @@
 
     &.is-disabled {
       pointer-events: none;
-      opacity: 0.7;
     }
   }  
 }
