--- a/styles/blocks/trash/_interface.scss
+++ b/styles/blocks/trash/_interface.scss
@@ -56,6 +56,7 @@
   &__item-wrapper {
     width: 100%;
     height: 100%;
+    padding: 7px;
   }
 
   &__start {
@@ -74,6 +75,14 @@
       opacity: 0.8;
       transform: scale(1.1);
     }
+  }
+
+  &__restart {
+    align-self: flex-start;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
   }
   
   &__boxes {
