--- a/styles/blocks/trash/_box.scss
+++ b/styles/blocks/trash/_box.scss
@@ -46,7 +46,6 @@
       &__top {
         animation-name: trash-box-open;
         animation-duration: 0.7s;
-        // animation-delay: 0.1s;
       }
 
       &__item-dump {
@@ -64,18 +63,24 @@
     left: 0;
     right: 0;
     display: block;
-    width: var(--box-label-space);
+    width: 100%;
+    max-width: var(--box-label-space);
     background-color: var(--box-color);
     color: #fff;
     padding: 5px;
     border-radius: 20px;
-  
+    font-size: 12px;
     transform: rotate(-45deg);
 
-    @include mixins.media() {  
+    @include mixins.media(400px) {
+      font-size: 14px;
+    }
+
+    @include mixins.media() {
       position: static;
       margin-bottom: 20px;
       transform: none;
+      font-size: 16px;
     }
   }
 
