--- a/styles/blocks/trash/_interface.scss
+++ b/styles/blocks/trash/_interface.scss
@@ -1,8 +1,14 @@
+@use '../../mixins';
+
 .trash-interface {
   display: grid;
   gap: 20px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   &__title {
+    display: block;
+    margin: 0 auto;
     color: #162b75;
     font-size: 24px;
     text-align: center;
@@ -16,6 +22,13 @@
     grid-template-areas: "right wrong"
                          "game game";
     justify-content: center;
+    
+    @include mixins.media(360px) {
+      grid-template-columns: repeat(3, max-content);
+      grid-template-rows: min-content;
+      grid-template-areas: "right game wrong";
+      gap: 10px;
+    }
   }
 
   &__score {
@@ -86,9 +99,16 @@
   }
   
   &__boxes {
+    --box-size: 60px;
+
     display: grid;
-    grid-template-columns: repeat(auto-fit, 100px);
+    grid-template-columns: repeat(4, minmax(60px, 100px));
     gap: 20px;
+
+    
+    // @include mixins.media(450px) {
+    //   --box-size: 100px;
+    // }
 
     &.is-disabled {
       pointer-events: none;
